==================== 2.19.2 ====================

2007-08-14  Federico Mena Quintero  <federico@novell.com>

	Released sabayon-2.19.2.

	* lib/config.py.in (DIRECTORIES_TO_IGNORE): Ignore .wapi,
	.fontconfig, .gstreamer-0.10.

2007-08-14  Federico Mena Quintero  <federico@novell.com>

	* admin-tool/sabayon.desktop.in (Categories): Remove
	"Application", add "GTK".  Patch by Christian Kirbach
	<Christian.Kirbach@googlemail.com>; fixes
	http://bugzilla.gnome.org/show_bug.cgi?id=417608

2007-08-14  Federico Mena Quintero  <federico@novell.com>

	* configure.ac: Bumped version number to 2.19.2.

	* NEWS: Updated.

2007-08-14  Federico Mena Quintero  <federico@novell.com>

	* configure.ac: Add a requirement for pygobject 2.12.0 or later
	for pygobject.filename_display_name().

	* lib/sources/filessource.py (FilesChange.get_short_description):
	Convert the filename to UTF-8 before generating a string for
	display.  Patch by Will Lachance <wrlach@gmail.com>.  Fixes
	http://bugzilla.gnome.org/show_bug.cgi?id=320968

2007-08-13  Federico Mena Quintero  <federico@novell.com>

	* lib/sources/paneldelegate.py (PanelDelegate.__init__): Fix
	"Appliction" typo.  Patch by Baris Cicek
	<baris@teamforce.name.tr>; fixes
	http://bugzilla.gnome.org/show_bug.cgi?id=463177

2007-08-13  Federico Mena Quintero  <federico@novell.com>

	* admin-tool/sabayon-apply: Import our config module.

	* admin-tool/sabayon-session: Likewise.

	* admin-tool/sabayon-apply (main): Start the toplevel "try" block
	right after the call to option_parser.parse_args(); if it exits
	due to being passed --help, we don't want our exception handler to
	be called.  Thanks to Colin Watson <cjwatson@debian.org> for
	catching this.  Fixes http://bugzilla.gnome.org/show_bug.cgi?id=458731

	* admin-tool/sabayon-session (main): Likewise.
	(main): Removed leftover "print" statements for debugging.

2007-08-13  Federico Mena Quintero  <federico@novell.com>

	* admin-tool/sabayon.desktop.in (Icon): Oops, make this just