@@ -435,7 +435,7 @@ Low</property>
 		      <child>
 			<widget class="GtkLabel" id="label18">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Writer default format:</property>
+			  <property name="label" translatable="yes">Default format for word processor:</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">True</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -463,7 +463,7 @@ Low</property>
 			  <property name="items" translatable="yes">
 OpenDocument (.odt)
 Word 97+ (.doc)
-OpenOffice 1.1 (.sxw)</property>
+OpenOffice.org 1.1 (.sxw)</property>
 			  <property name="add_tearoffs">False</property>
 			  <property name="focus_on_click">True</property>
 			</widget>
@@ -506,7 +506,7 @@ OpenOffice 1.1 (.sxw)</property>
 		      <child>
 			<widget class="GtkLabel" id="label19">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Calc default format:</property>
+			  <property name="label" translatable="yes">Default format for spreadsheet:</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">True</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -534,7 +534,7 @@ OpenOffice 1.1 (.sxw)</property>
 			  <property name="items" translatable="yes">
 OpenDocument (.ods)
 Excel 97+ (.xls)
-OpenOffice 1.1 (.sxc)</property>
+OpenOffice.org 1.1 (.sxc)</property>
 			  <property name="add_tearoffs">False</property>
 			  <property name="focus_on_click">True</property>
 			</widget>
@@ -577,7 +577,7 @@ OpenOffice 1.1 (.sxc)</property>
 		      <child>
 			<widget class="GtkLabel" id="label20">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Impress default format:</property>
+			  <property name="label" translatable="yes">Default format for presentations:</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">True</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -605,7 +605,7 @@ OpenOffice 1.1 (.sxc)</property>
 			  <property name="items" translatable="yes">
 OpenDocument (.odp)
 PowerPoint 97+ (.ppt)
-OpenOffice 1.1 (.sxi)</property>
+OpenOffice.org 1.1 (.sxi)</property>
 			  <property name="add_tearoffs">False</property>
 			  <property name="focus_on_click">True</property>
 			</widget>
@@ -755,7 +755,7 @@ Small</property>
 		      <child>
 			<widget class="GtkLabel" id="label22">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Undo Steps:</property>
+			  <property name="label" translatable="yes">Number of undo steps:</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">True</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -844,7 +844,7 @@ Small</property>
 	  <child>
 	    <widget class="GtkLabel" id="label23">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">OpenOffice</property>
+	      <property name="label" translatable="yes">OpenOffice.org</property>
 	      <property name="use_underline">False</property>
 	      <property name="use_markup">False</property>
 	      <property name="justify">GTK_JUSTIFY_LEFT</property>
